# mcp-godot-desenvolvimento

./: .gdlintrc  .gitignore  .mcp_governor_state.json  .reorg_baseline.json  .reorg_progress.json  .roadmap_progress.json  .roadmap_progress_a2.json  .safety_policy.json  .smoke_before_1.1.json  .snapshot_before_1.1.json  AGENTS.md  ARQUITETURA_MCP.md  AUDITORIA-PENDENCIAS-RESPOSTAS.md  AUDIT_PROTOCOL.md  BRAND.md  CATALOGO_COMPLETO_MCP_GODOT.md  CHANGELOG.md  CHECKPOINT.md  CODE_OF_CONDUCT.md  CONTEXTO_PROJETO_MCP_GODOT.md  CONTRACT_SNAPSHOT.json  CONTRIBUTING.md  DATA_CONTRACTS.md  FEATURES.md  GUIA_CONEXAO.md  GUIA_INSTALACAO.md  HANDOFF.md  INVENTARIO_DOCS.md  INVENTARIO_OPS_ROLLUPS.md  LEARNINGS.md  LIMPEZA_DOCS.md  MASTER_IMPLEMENTATION_ROADMAP.md  MCP_ESTADO_ATUAL.md  NEXT_SESSION.md  NEXT_STEP.md  PLANO_REESTRUTURACAO_DOCS.md  PROMPT_CONTINUIDADE.md  README.en.md  README.md  README_AUTO.md  (+54 more)
.clinerules/: 00-mestre.md  01-camada-0-fundacao-seguranca.md  01-processo.md  02-camada-1-experiencia-dev.md  03-camada-2-testes.md  04-camada-3-criacao-com-fosso.md  05-camada-4-extensoes-processo.md  06-camada-5-gameplay.md  07-camada-6-profundidade-engine.md  08-camada-7-polimento.md  09-glossario-referencias.md
.githooks/: pre-commit
.github/: DISCUSSIONS.md  FUNDING.yml  copilot-instructions.md
.mcp_fatia_steps/: fatia_1.9.json
.session/: NEXT_SESSION.md  PROMPT_MESTRE.md  SESSION_NEXT.md  SNAPSHOT_2026-07-20.json  SNAPSHOT_2026-07-20_A2.json  SNAPSHOT_2026-07-21.json  SNAPSHOT_2026-07-23.json
adapters/: __init__.py  transport.py
addons/: plugin.cfg
backups/: bridge.py
behaviors/: CATALOGO_COMPLETO.md  README.md  _enriquecimento_proposto.json  behavior.schema.json
blueprints/: README.md  blueprint.schema.json  platformer.json  puzzle.json  topdown_shooter.json
core/: __init__.py  context.py  intent_router.py  legacy_data.py  tool_definitions.py
docs/: ARQUITETURA_MCP.md  CURADORIA_PRECEDENCIA.md  DUMP_T1R.md  LEARNINGS.md  MASTER_IMPLEMENTATION_ROADMAP.md  PESQUISA_EXTERNA.md  QUARENTENA_CRITERIO_SAIDA.md  REORG_ROADMAP.md  ROADMAP_DEFINITIVO.md  SUTURE_ISSUES.md  arquitetura.md  auditoria_registry.md  getting-started.md  guia-migracao.md  guia-publicacao.md  modo-professor.md  tools.md
domains/: __init__.py
example_project/: .mcp_phase_state.json
experimental/: README.md  quarentena.json  quarentena_defs.py
seeds/: README.md  (+5 more)
(+4197 files in other folders)
