[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-mcp-agent"
version = "3.9.0"
description = "MCP Godot Agent v3.8.0 — 236 ferramentas (235 handlers, 189 depreciadas, 80 aliases), 249 behaviors, 38 dominios, 6 fases. Servidor MCP stdio para criacao de jogos Godot 4.7 via IA agentiva (DeepSeek V4 Pro). Pipeline de verificacao, sandbox GDScript, ClassDB introspeccao, Runtime Bridge TCP, Proof Ledger, Saga Engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "godot_parser>=0.1.7",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["tools*", "scripts*"]
